--- a/css work/index.html
+++ b/css work/index.html
@@ -7,9 +7,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+
     <div class="box1">
+
+        <div id= "container">
+            <div id="name">
+                <h2>Gaurav</h2>
+            </div>
+            <div class = "container2">
+             <button id="button1">Home</button>
+                <button id="button2">Profile</button>
+            </div>
+        </div>
+
+        <div class="journey">
         <h1>Your Journey Starts Here</h1>
-        <button>Explore</button>
+                <button id="expbutton">Explore</button>
         </div>
     </div>
 </body>
