--- a/css work/index.html
+++ b/css work/index.html
@@ -18,6 +18,7 @@
             <div class = "container2">
              <button id="button1">Home</button>
                 <button id="button2">Profile</button>
+                <button id="button3">Register</button>
             </div>
         </div>
 
