--- a/css work/index.html
+++ b/css work/index.html
@@ -27,5 +27,11 @@
                 <button id="expbutton">Explore</button>
         </div>
     </div>
+
+    <div class="box2">
+        <div id="image1"></div>
+        <div id="image2"></div>
+        <div id="image3"></div>
+    </div>
 </body>
 </html>
