--- a/css work/index.html
+++ b/css work/index.html
@@ -8,30 +8,43 @@
 </head>
 <body>
 
-
+<!-- navbar -->
     <div class="box1">
 
-        <div id= "container">
+        <div id= "container">  
             <div id="name">
                 <h2>Gaurav</h2>
             </div>
+            
             <div class = "container2">
              <button id="button1">Home</button>
                 <button id="button2">Profile</button>
                 <button id="button3">Register</button>
             </div>
         </div>
-
+<!-- main content -->
         <div class="journey">
         <h1>Your Journey Starts Here</h1>
                 <button id="expbutton">Explore</button>
         </div>
     </div>
-
+<!-- second page -->
     <div class="box2">
-        <div id="image1"></div>
-        <div id="image2"></div>
-        <div id="image3"></div>
+        <div id="image1">
+            <div id="text1">
+                <h3>Walk among the Frosty Roads</h3>
+            </div>
+        </div>
+        <div id="image2">
+            <div id="text2">
+                <h3>Enjoy the Luxurious Ride</h3>
+            </div>
+        </div>
+        <div id="image3">
+            <div id="text3">
+                <h3>Sail Across the Horizon</h3>
+            </div>
+        </div>
     </div>
 </body>
 </html>
