--- a/css work/index.html
+++ b/css work/index.html
@@ -46,5 +46,16 @@
             </div>
         </div>
     </div>
+    
+<!-- third page -->
+    <div class ="box3">
+        <div id="container3">
+            <div id="reviews">
+                <div id="square1"></div>
+                <div id="square2"></div>
+                <div id="square3"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
