--- a/css work/index.html
+++ b/css work/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>styling</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+  href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css"
+  rel="stylesheet"
+/>
 </head>
 <body>
 
@@ -13,7 +17,7 @@
 
         <div id= "container">  
             <div id="name">
-                <h2>Gaurav</h2>
+                <h2><i class="ri-sailboat-line"></i>Gaurav</h2>
             </div>
             
             <div class = "container2">
@@ -62,9 +66,13 @@
         <div id = "conclusion">
             <h2>The Memorable Journey Awaits you</h2>
         </div>
-        <div id = "baseline">
-            <h4>All Subjects are to Market Risk</h4>
+        <div id = "bottombar">
+            <h3><i class="ri-phone-fill"></i>Contact Us</h3>
+            <h3><i class="ri-feedback-fill"></i>Feedback</h3>
+            <h3><i class="ri-info-card-fill"></i>About Us</h3>
         </div>
+        </div>
+        
     </div>
 </body>
 </html>
