--- a/css work/index.html
+++ b/css work/index.html
@@ -83,6 +83,8 @@
         <div id="gallery1"></div>
         <div id="gallery2"></div>
         <div id="gallery3"></div>
+        <div id="gallery4"></div>
+        <div id="gallery5"></div>
      </div>
  </div>
 
